Sun Oct 19 17:37:37 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/unicode_normalize.rb: Small documentation fix.

Sun Oct 19 17:26:26 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/unicode_normalize.rb: Added documentation.

Sun Oct 19 11:09:09 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* tool/unicode_norm_gen.rb, lib/unicode_normalize.rb:
	  File name change from lib/unicode_normalize/normalize_tables.rb
	  to lib/unicode_normalize/tables.rb.

Sun Oct 19 10:12:12 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/unicode_normalize.rb: Changing method names, see
	  https://bugs.ruby-lang.org/issues/10084#note-7

Sun Oct 19 10:10:10 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/unicode_normalize.rb: Changing module name.

Sun Oct 19 10:08:08 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/unicode_normalize.rb: Changing require statement,
	  adjusting copyright.

Sun Oct 19 10:04:04 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/unicode_normalize.rb: Importing from
	  https://github.com/duerst/eprun/blob/master/lib/string_normalize.rb.
	  (removing trailing whitespace, fixing EOLs and adding EOL property)

Sun Oct 19 09:56:56 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* tool/unicode_norm_gen.rb: Changed module name.

Sun Oct 19 09:48:48 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/unicode_normalize/normalize.rb: Changed module name,
	  adjusted copyright.

Sun Oct 19 09:38:38 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/unicode_normalize/normalize.rb: Importing from
	  https://github.com/duerst/eprun/blob/master/lib/normalize.rb.

Sat Oct 18 20:40:52 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_core.h, proc.c, vm_backtrace.c, vm_trace.c:
	  remove rb_binding_new_with_cfp, and use rb_vm_make_binding instead.

Sat Oct 18 20:38:48 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_core.h, vm.c, proc.c: fix GC mark miss on bindings.
	  [ruby-dev:48616] [Bug #10368]

	* test/ruby/test_eval.rb: add a test code.